# VirtualMachine2

./: CMakeLists.txt  README.md  main.cpp  turing.vm
header/: IInstruction.h  Instruction.h  InstructionSet.h  LinearMemory.h  Logger.h  Page.h  Singleton.h  SpecialInstructionImplementation.h  Stack.h  StackObject.h  State.h  maths.h
source/: Instruction.cpp  InstructionSet.cpp  LinearMemory.cpp  Page.cpp  SpecialInstructionImplementation.cpp  Stack.cpp  StackObject.cpp  State.cpp  maths.cpp
specs/: specs.tex
tests/: CMakeLists.txt  instructions_check.cpp  unit_framework.h
